--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-    "apiUrl": "http://localhost:3900/api"
+    "apiUrl_1": "http://localhost:3900/api",
+    "apiUrl": "https://young-depths-02968.herokuapp.com/api"
 }
